--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "start": "next start"
   },
   "dependencies": {
+    "@types/react-redux": "^7.1.23",
     "next": "latest",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-redux": "^7.2.6"
   },
   "devDependencies": {
     "@types/node": "17.0.4",
