--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.0",
     "@types/react-redux": "^7.1.23",
     "next": "latest",
     "react": "^17.0.2",
